<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/lightBg"
    android:padding="16dp">
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/root_access"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/application_root_needed"
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/rootButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/rounded_button"
            app:rippleColor="@color/white"
            app:backgroundTint="@color/accent"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/grant_button"/>
    </LinearLayout>
</LinearLayout>
