<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp"
        android:layout_gravity="bottom">
        <LinearLayout
            android:id="@+id/changeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_button"/>
            </LinearLayout>
            <Space
                android:layout_width="50dp"
                android:layout_height="0dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/applyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_button"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/serviceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/white"
        android:backgroundTint="@color/accent"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/ic_play"
        app:layout_anchor="@id/bottomBar"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </FrameLayout>
        <ImageView
            android:id="@+id/logoView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            app:tint="@color/white"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintBottom_toTopOf="@id/cardContainer"
            app:layout_constraintStart_toStartOf="@id/headerLayout"
            app:layout_constraintTop_toTopOf="@+id/headerLayout"
            android:src="@drawable/ic_block"/>
        <TextView
            android:id="@+id/nameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintStart_toEndOf="@id/logoView"
            app:layout_constraintEnd_toEndOf="@id/headerLayout"
            app:layout_constraintBottom_toTopOf="@id/descriptionView"
            app:layout_constraintTop_toTopOf="@id/cardContainer"
            app:layout_constraintHorizontal_bias="0.5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="8dp"/>
        <TextView
            android:text="@string/app_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/descriptionView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@id/headerLayout"
            app:layout_constraintEnd_toEndOf="@id/headerLayout"
            app:layout_constraintStart_toEndOf="@id/logoView"
            app:layout_constraintTop_toBottomOf="@id/nameView"/>
        <LinearLayout
            android:id="@+id/cardContainer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout"
            app:layout_constraintBottom_toBottomOf="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_height="150dp"
            android:weightSum="2"
            android:clipChildren="false"
            android:gravity="center_vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:clipChildren="false">
                <androidx.cardview.widget.CardView
                    android:id="@+id/blockedCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:text="@string/label_blocked"
                            android:layout_gravity="center"/>
                        <TextView
                            android:id="@+id/blockedCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_gravity="center"
                            android:text="@string/count_default"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:shape="ring"
                    app:cardCornerRadius="80dp"
                    app:layout_constraintBottom_toTopOf="@id/blockedCard"
                    app:layout_constraintLeft_toLeftOf="@id/blockedCard"
                    app:layout_constraintRight_toRightOf="@id/blockedCard"
                    app:layout_constraintTop_toTopOf="parent">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:elevation="16dp"
                        android:layout_gravity="center"
                        android:tint="@android:color/holo_red_light"
                        android:src="@drawable/ic_block"/>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:clipChildren="false">
                <androidx.cardview.widget.CardView
                    android:id="@+id/allowedCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:text="@string/label_allowed"
                            android:layout_gravity="center"/>
                        <TextView
                            android:id="@+id/allowedCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_gravity="center"
                            android:text="@string/count_default"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:shape="ring"
                    app:cardCornerRadius="80dp"
                    app:layout_constraintBottom_toTopOf="@id/allowedCard"
                    app:layout_constraintLeft_toLeftOf="@id/allowedCard"
                    app:layout_constraintRight_toRightOf="@id/allowedCard"
                    app:layout_constraintTop_toTopOf="parent">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:elevation="16dp"
                        android:layout_gravity="center"
                        android:tint="@android:color/holo_green_light"
                        android:src="@drawable/ic_checkmark"/>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardContainer"
            app:layout_constraintBottom_toBottomOf="parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ProgressBar
                    android:id="@+id/appProgressBar"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:visibility="gone"
                    android:background="#121212"
                    android:scrollIndicators="right"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="false"
                    android:scrollbarThumbVertical="@drawable/scrollbar_thumb_vert"
                    android:id="@+id/appView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
